Rolling back custom HTMLDocument as it doesn't work as expected.